------------------------------------------------------------------------
r390 | gaser | 2011-01-24 20:38:53

M      sanlmMex.mexw32
M      AmapMex.mexa64
M      AmapMex.mexw32
M      cg_realign.m
M      sanlmMex.mexw64
M      VBM8-Manual.pdf
M      sanlmMex_noopenmp.mexglx
M      sanlmMex.mexglx
M      sanlmMex.mexmaci64
M      AmapMex.mexw64
M      sanlmMex_noopenmp.mexmaci64
M      sanlmMex_noopenmp.mexa64
M      sanlmMex.mexa64
M      VBM8-Manual.doc
M      AmapMex.mexglx

(1) Corrected definition of groups/time points in VBM8 manual 
    (statistical analysis of longitudinal data). Thanks to Pieter van de 
    Vijver for finding this error.
(2) Recompiled all c-files.
------------------------------------------------------------------------
r391 | gaser | 2011-01-27 22:59:47

M      cg_spmT2x.m

Implemented new spm correction for non-stationarity in cg_spmT2x.m.
------------------------------------------------------------------------
r392 | gaser | 2011-02-10 17:40:00

M      VBM8-Manual.pdf
M      VBM8-Manual.doc

Added missing second main effect for statistical analysis of longitudinal data
in one group.
------------------------------------------------------------------------
r393 | gaser | 2011-02-11 10:29:34

M       VBM8-Manual_Japanese.doc
M       VBM8-Manual_Japanese.pdf

Updated japanese version of manual.
------------------------------------------------------------------------
r394 | gaser | 2011-02-24 23:22:20

M      cg_morph_vol.m
M      cg_vbm8_write.m

(1) Added new morphological functions to cg_morph_vol.m.
(2) Dartel template in cg_vbm8_write.m can be now also selected in batch mode
    (thanks to Florian Kurth for adding this).
------------------------------------------------------------------------
r395 | gaser | 2011-03-04 14:14:07

M      VBM8-Manual.pdf
M      VBM8-Manual.doc

Updated manual to consider changes with Dartel template.
------------------------------------------------------------------------
r396 | gaser | 2011-03-04 14:20:09